<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">


        <TextView
            android:id="@+id/cancel_btn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/black"
            android:text="@string/cancel_btn_text"
            android:textColor="@color/blue"
            android:gravity="center"/>

        <TextView
            android:id="@+id/act_name"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/layout_creation_name"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/accept_btn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/black"
            android:text="@string/accept_btn_text"
            android:textColor="@color/blue"
            android:gravity="center"/>

        <CheckBox
            android:id="@+id/task_done_checkbox"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="-20dp"
            android:layout_toStartOf="@id/act_name"
            android:layout_below="@id/act_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/task_mark_text"
            android:gravity="center"
            android:textColor="@color/grey"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/task_done_checkbox"
            android:layout_above="@id/task_field"/>

        <EditText
            android:id="@+id/task_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="75dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/universal_view_design_background"
            android:layout_below="@id/task_done_checkbox"
            android:hint="@string/task_hint"/>

        <RelativeLayout
            android:id="@+id/date_and_importance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_below="@id/task_field"
            android:background="@drawable/universal_view_design_background">

            <TextView
                android:id="@+id/importance"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/importance_field"
                android:textColor="@color/white"
                android:layout_alignParentStart="true"/>

            <Spinner
                android:id="@+id/importance_spinner"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_toEndOf="@id/importance"
                android:entries="@array/importance_array"
                android:spinnerMode="dropdown"/>

            <View
                android:id="@+id/split_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/grey"
                android:alpha="0.5"
                android:layout_below="@id/importance"/>

            <TextView
                android:id="@+id/deadline_text"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_below="@id/split_line"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:text="@string/deadline_field"/>


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/toggle_deadline"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@id/split_line"
                android:layout_alignParentStart="true"
                android:layout_marginStart="150dp"
                android:gravity="center"
                app:thumbTint="@color/white"

                app:track="@drawable/track_toggle_button" />

        </RelativeLayout>

        <CalendarView
            android:id="@+id/deadline_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_and_importance"
            android:layout_marginTop="3dp" />

        <TextView
            android:id="@+id/delete_task"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/delete_button_background"
            android:text="@string/delete_btn_text"
            android:gravity="center"
            android:layout_below="@id/deadline_date"
            android:textColor="@color/red"/>

    </RelativeLayout>

</ScrollView>